PEP8 coding style on main branch completed. Only one PEP8 complaint left due to Python3 compatibility import

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 script:
   - py.test -s --cov=py_linq --cov-report xml:/tmp/cov-py_linq.xml --junitxml=/tmp/py_linq.xml
 #  - flake8 --version
-#  - flake8 --ignore E501 py_linq tests
+  - flake8 --ignore E501 py_linq tests
 
 after_success:
   - coveralls
