--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install -qq "pytest-cov<2.6"
   - pip install -qq pycodestyle
   - pip install -qq python-coveralls
+  - pip install -qq future
   - pip install --upgrade pip
 
 # command to run tests
