--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,11 @@ verify_ssl = true
 pytest = "*"
 pep8 = "*"
 pytest-cov = "<2.6"
+pycodestyle = "*"
 
 [packages]
 pytest = "*"
 future = "*"
 
 [requires]
-python_version = "2.7"
+python_version = "3.7"
