--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,13 @@ pytest = "*"
 pytest-cov = "<2.6"
 black = "*"
 pre-commit = "*"
+flake8 = "*"
 
 [packages]
 future = "*"
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
