--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -39,7 +39,14 @@ jobs:
         pip install pytest
         pip install "pytest-cov<2.6"
         pip install python-coveralls
-        pytest --cov=py_linq
-    - name: Push coverage to coveralls.io
-      run: |
-        coveralls
+        pytest --cov=py_linq --cov-report=xml:./coverage/lcov.info
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel: true
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
