Removed Coveralls from Github build action

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,17 +37,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        pip install "pytest-cov<2.6"
-        pip install python-coveralls
-        pytest --cov=py_linq --cov-report=
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel: true
-        path-to-lcov: .coverage
-    - name: Coveralls Finished
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel-finished: true
+        pytest
