--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -1,16 +1,9 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
-name: Python package
+name: Continuous Integration
 
 on:
   push:
     branches:
-      - '**'
-      - '!master'
-  pull_request:
-    branches:
-      - 'development'
+      - 'release/*'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,3 +24,9 @@ jobs:
       run: poetry run flake8 . --ignore=W503,E712,E231,E203 --count --max-complexity=10 --max-line-length=88 --show-source --statistics  --exclude=.git,__pycache__,.venv
     - name: Test with pytest
       run: poetry run pytest tests
+    - name: Configure publishing credentials
+      run: poetry config pypi-token.pypi ${{ PYPI_TOKEN }}
+    - name: Configure PyPI repository
+      run: poetry config repositories.test https://test.pypi.org/legacy/
+    - name: Publish to Test PyPI
+      run: poetry publish --repository test
