--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -23,10 +23,11 @@ jobs:
         poetry install
       env:
         POETRY_VIRTUALENVS_CREATE: false
-        POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+        POETRY_REPOSITORIES_TESTPYPI_URL: https://test.pypi.org/legacy/
+        POETRY_PYPI_TOKEN_TESTPYPI: ${{ secrets.PYPI_TOKEN }}
     - name: Lint with flake8
       run: poetry run flake8 . --ignore=W503,E712,E231,E203 --count --max-complexity=10 --max-line-length=88 --show-source --statistics  --exclude=.git,__pycache__,.venv
     - name: Test with pytest
       run: poetry run pytest tests
     - name: Publish to Test PyPI
-      run: poetry publish --build --dry-run
+      run: poetry publish --build
