#55-Token bug workaround in poetry for connecting to PyPI

--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -24,7 +24,8 @@ jobs:
       env:
         POETRY_VIRTUALENVS_CREATE: false
         POETRY_REPOSITORIES_TESTPYPI_URL: https://test.pypi.org/legacy/
-        POETRY_PYPI_TOKEN_TESTPYPI: ${{ secrets.PYPI_TOKEN }}
+        POETRY_HTTP_BASIC_TESTPYPI_USERNAME: __token__
+        POETRY_HTTP_BASIC_TESTPYPI_PASSWORD: ${{ secrets.PYPI_TOKEN }}
     - name: Lint with flake8
       run: poetry run flake8 . --ignore=W503,E712,E231,E203 --count --max-complexity=10 --max-line-length=88 --show-source --statistics  --exclude=.git,__pycache__,.venv
     - name: Test with pytest
