--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -23,11 +23,9 @@ jobs:
         poetry install
       env:
         POETRY_VIRTUALENVS_CREATE: false
-        POETRY_HTTP_BASIC_PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        POETRY_HTTP_BASIC_PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
     - name: Lint with flake8
       run: poetry run flake8 . --ignore=W503,E712,E231,E203 --count --max-complexity=10 --max-line-length=88 --show-source --statistics  --exclude=.git,__pycache__,.venv
     - name: Test with pytest
       run: poetry run pytest tests
     - name: Publish to Test PyPI
-      run: poetry publish --build --dry-run
+      run: poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }} --dry-run
