--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -34,5 +34,12 @@ jobs:
       matrix:
         python-version: [3.6]
     steps:
+    - name: Install poetry and dependencies
+      run: |
+        pip install -U pip
+        pip install poetry
+        poetry install
+      env:
+        POETRY_VIRTUALENVS_CREATE: false
     - name: Publish to Test PyPI
       run: poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }} --dry-run
