--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -34,6 +34,11 @@ jobs:
       matrix:
         python-version: [3.6]
     steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Install poetry and dependencies
       run: |
         pip install -U pip
