Test and Release GitHub Actions (#58)
* #55-error in test CD action yaml

* #55-Removed CI from being run on release branches

* #55-Renamed CD action for testing CD. Added missing build command for building package

* #55-Change test CD action yaml

* #55-Dry run test CD action

* #55-more CD changes for test

* #55-Token bug workaround in poetry for connecting to PyPI

* #55-Trying dry run again

* #55-Trying HTTP Basic Auth

* #55-Passing credentials on CLI publish command

* #55-Multistage CD yaml file so testing on multiple python versions of building package for only 3.6+

* #55-Missing poetry installation for deploy stage

* #55-deploy stage errors

* #55-production CD action file

--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -1,9 +1,9 @@
-name: Test Continuous Deployment
+name: Production Continuous Deployment
 
 on:
   push:
     branches:
-      - 'release/*'
+      - 'master'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -47,4 +47,4 @@ jobs:
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Publish to Test PyPI
-      run: poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }} --dry-run
+      run: poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
