Flake8 config and codecov integration

--- a/.github/workflows/test-cd.yml
+++ b/.github/workflows/test-cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ['3.x']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -24,15 +24,19 @@ jobs:
       env:
         POETRY_VIRTUALENVS_CREATE: false
     - name: Lint with flake8
-      run: poetry run flake8 . --ignore=W503,E712,E231,E203 --count --max-complexity=10 --max-line-length=88 --show-source --statistics  --exclude=.git,__pycache__,.venv
+      run: poetry run flake8 .
     - name: Test with pytest
-      run: poetry run pytest tests
+      run: poetry run pytest tests --cov=py_linq --cov-branch --cov-report=xml:coverage.xml
+    - uses: codecov/codecov-action@v2
+      with:
+        files: ./coverage.xml
+        dry_run: true
   deploy:
     needs: test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6]
+        python-version: ['3.x']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
