--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 repos:
     -   repo: https://github.com/ambv/black
-        rev: 20.8b1
+        rev: 23.1.0
         hooks:
         - id: black
           language_version: python3.7
-    -   repo: https://gitlab.com/pycqa/flake8
-        rev: 3.8.4
+    -   repo: https://github.com/pycqa/flake8
+        rev: 6.0.0
         hooks:
         - id: flake8
