--- a/.github/workflows/prod-cd.yml
+++ b/.github/workflows/prod-cd.yml
@@ -26,10 +26,9 @@ jobs:
     - name: Lint with flake8
       run: poetry run flake8 .
     - name: Test with pytest
-      run: poetry run pytest tests --cov=py_linq --cov-branch --cov-report=xml:coverage.xml
-    - uses: codecov/codecov-action@v2
-      with:
-        files: ./coverage.xml
+      run: poetry run pytest tests --cov=py_linq --cov-branch --cov-report term
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
   deploy:
     needs: test
     runs-on: ubuntu-latest
