--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/viralogic/py-enumerable"
 keywords = ["LINQ", "py-linq"]
 
 [tool.poetry.dependencies]
-python = ">=3.6.1"
+python = ">=3.7"
 future = "^0.18.2"
 six = "^1.16.0"
 
@@ -20,6 +20,9 @@ pytest-cov = "^2.10.1"
 black = "^20.8b1"
 pre-commit = "^2.8.2"
 flake8 = "^3.8.4"
+
+[tool.poetry.group.dev.dependencies]
+pytest-benchmark = "^4.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
